--- a/client-pod.yaml
+++ b/client-pod.yaml
@@ -5,8 +5,8 @@ metadata:
   labels:
     component: web
 spec:
-  containers: 
+  containers:
     - name: client
-      image: stephengrider/multi-client
+      image: stephengrider/multi-worker
       ports:
-        containerPort: 3000
+        - containerPort: 9999
