changed: syntactic issues found with client-deployment.yaml
- the additional notes showing the info of how the things have gone on my local machine

--- a/client-deployment.yaml
+++ b/client-deployment.yaml
@@ -2,10 +2,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  - name: client-deployment
+  name: client-deployment
 spec:
   replicas: 1
-  selector: 
+  selector:
     matchLabels:
       component: web
   template:
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: 'stephengrider/multi-client'
-          ports: 
-            - containerPort: 3000    
+          image: stephengrider/multi-client
+          ports:
+            - containerPort: 3001
